[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scenes/StartMenu/blue_team_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/StartMenu/red_team_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/StartMenu/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://src/resources/images/icon.png" type="Texture" id=4]
[ext_resource path="res://src/resources/images/start menu.png" type="Texture" id=5]
[ext_resource path="res://src/resources/images/Group 1.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]
ItemList/colors/font_color = Color( 0.63, 0.63, 0.63, 1 )
ItemList/colors/font_color_selected = Color( 1, 1, 1, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 0.1 )
ItemList/constants/hseparation = 25
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 25
ItemList/constants/vseparation = 25
ItemList/fonts/font = null
ItemList/styles/bg = null
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null

[node name="StartMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="blue_team" type="Button" parent="."]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 1 )
text = "Blue Team "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red_team" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 720.0
theme = ExtResource( 2 )
text = "Red Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.662867, 0.662867 )
texture = ExtResource( 5 )

[node name="RoleSelection" type="Control" parent="."]
visible = false
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="RoleSelection"]
margin_right = 640.0
margin_bottom = 720.0
size_flags_horizontal = 4
theme = SubResource( 1 )
items = [ "Role 1", ExtResource( 4 ), false, "Role 2", ExtResource( 4 ), false, "Role 3", ExtResource( 4 ), false ]
same_column_width = true
fixed_column_width = 590
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueSelect" type="Sprite" parent="."]
position = Vector2( 960, 520 )
texture = ExtResource( 6 )

[node name="RedSelect" type="Sprite" parent="."]
position = Vector2( 320, 520 )
texture = ExtResource( 6 )
[connection signal="button_up" from="blue_team" to="." method="_on_blue_team_button_up"]
[connection signal="button_up" from="red_team" to="." method="_on_red_team_button_up"]
[connection signal="item_activated" from="RoleSelection/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="RoleSelection/ItemList" to="." method="_on_ItemList_item_selected"]
